--- a/index.html
+++ b/index.html
@@ -19,31 +19,25 @@
 </head>
 <body class="container">
   <header>
-    <h1 class="head-banner purple-bkg" >Code Journal</h1>
+    <div class="head-banner purple-bkg row align-center">
+      <h1>Code Journal</h1>
+      <a class="show-entries">Entries</a>
+    </div>
   </header>
   <main class="form">
-    <div class="row space-bt">
-      <h2>Entries</h2>
-          <button name="new" class="save-button rounded-border purple-bkg">NEW</button>
+    <div id="visible-entries">
+      <div class="row space-bt">
+        <h2>Entries</h2>
+            <button id="new-entry" name="new" class="save-button rounded-border purple-bkg">NEW</button>
+      </div>
+      <div data-view="entries">
+        <p class="no-entry">No entries have been recorded.</p>
+        <ul id="entrylist">
+        </ul>
+      </div>
     </div>
-    <div id="viewentries" data-view="entries">
-      <ul>
-        <li>
-          <div class="row">
-            <div class="column-half img-frame">
-              <img id="photo" src="images/nelson.png" alt="placeholder">
-            </div>
-            <div class="column-half">
-                <h3>Test Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dolorem excepturi aut!</p>
-            </div>
 
-          </div>
-        </li>
-      </ul>
-    </div>
-    <!--
-    <div data-view="entry-form">
+    <div id="visible-form" data-view="entry-form" class="hidden">
       <h2>New Entry</h2>
       <form class="row right" id="code-form">
         <div class="column-half img-frame">
@@ -63,7 +57,7 @@
           <button form="code-form" name="save" type="submit" class="save-button rounded-border purple-bkg">SAVE</button>
         </div>
       </form>
-    </div> -->
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
