user can view entries tested

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="container">
+
   <header>
     <div class="head-banner purple-bkg row align-center">
       <h1>Code Journal</h1>
@@ -25,10 +26,11 @@
     </div>
   </header>
   <main class="form">
+
     <div id="visible-entries">
-      <div class="row space-bt">
+      <div class="row">
         <h2>Entries</h2>
-            <button id="new-entry" name="new" class="save-button rounded-border purple-bkg">NEW</button>
+        <button id="new-entry" name="new" class="save-button rounded-border purple-bkg">NEW</button>
       </div>
       <div data-view="entries">
         <p class="no-entry">No entries have been recorded.</p>
@@ -58,6 +60,7 @@
         </div>
       </form>
     </div>
+
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
