--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
       <div data-view="entries">
         <p class="no-entry">No entries have been recorded.</p>
         <ul id="entrylist">
+          <!-- start test here -->
+
+          <!-- end test here -->
         </ul>
       </div>
     </div>
