--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>Code Journal</h1>
         <a class="show-entries">Entries</a>
         <form class="search-form">
-          <input name="search" type="text" id="search" placeholder="Search Entries">
+          <input required name="search" type="text" id="search" placeholder="Search Entries">
           <button class="no-bkg-button" type="submit"><i class="fas fa-search"></i></button>
         </form>
       </div>
