--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <input required name="search" type="text" id="search" placeholder="Search Entries">
           <button class="no-bkg-button" type="submit"><i class="fas fa-search"></i></button>
         </form>
-        <div class="custom-select">
+        <div>
           <select id="sort-order" name="sort-order">
             <option value="desc">Newest First</option>
             <option value="asc">Oldest First</option>
