tag css and tag populating func working

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <input required name="title" type="text" id="title">
             <label for="entry-photo">Photo URL</label>
             <input required name="photo" type="url" id="photolink">
+            <label for="tags">Tags</label>
+            <input required name="tags" type="tags" id="tags" placeholder="Please separate tags with spaces">
           </div>
           <div class="column-full">
             <label for="entry-notes">Notes</label>
