--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <label for="entry-photo">Photo URL</label>
             <input required name="photo" type="url" id="photolink">
             <label for="tags">Tags</label>
-            <input required name="tags" type="tags" id="tags" placeholder="Please separate tags with spaces">
+            <input name="tags" type="tags" id="tags" placeholder="Please separate tags with spaces">
           </div>
           <div class="column-full">
             <label for="entry-notes">Notes</label>
